--- a/proyecto002/src/app/app.component.html
+++ b/proyecto002/src/app/app.component.html
@@ -2,12 +2,13 @@
   <h1>Administración de artículos</h1>
     <table border="1" *ngIf="hayRegistros(); else sinarticulos">
       <tr>
-        <td>Codigo</td><td>Descripcion</td><td>Precio</td><td>Borrar</td><td>Seleccionar</td>
+        <td>Codigo</td><td>Descripcion</td><td>Precio</td><td>Ubicación</td><td>Borrar</td><td>Seleccionar</td>
       </tr>
       <tr *ngFor="let art of articulos">
         <td>{{art.codigo}}</td>
         <td>{{art.descripcion}}</td>
         <td>{{art.precio}}</td>
+        <td>{{art.ubicacion}}</td>
         <td><button (click)="borrar(art.codigo)">Borrar?</button></td>
         <td><button (click)="seleccionar(art)">Seleccionar</button></td>        
       </tr>
@@ -22,6 +23,9 @@
       </p>
       <p>
         precio:<input type="number" [(ngModel)]="art.precio" />
+      </p>            
+      <p>
+        ubicacion:<input type="text" [(ngModel)]="art.ubicacion" />
       </p>            
       <p><button (click)="agregar()">Agregar</button>
       <button (click)="modificar()">Modificar</button></p>
