--- a/proyecto006/src/app/app.component.html
+++ b/proyecto006/src/app/app.component.html
@@ -3,5 +3,6 @@
   <br>
   <button (click)="selector1.fijar(1)">Fijar en 1</button><br>
   <button (click)="selector1.fijar(5)">Fijar en 5</button><br>
-  <button (click)="selector1.fijar(10)">Fijar en 10</button>
+  <button (click)="selector1.fijar(10)">Fijar en 10</button><br>
+  <button (click)="selector1.resetear()">Resetear (Poner a cero)</button>
 </div>
