--- a/proyecto007/src/app/app.component.html
+++ b/proyecto007/src/app/app.component.html
@@ -3,7 +3,8 @@
   <br>  
   <button (click)="fijarSelector1(1)">Fijar en 1</button><br>
   <button (click)="fijarSelector1(5)">Fijar en 5</button><br>
-  <button (click)="fijarSelector1(10)">Fijar en 10</button>
+  <button (click)="fijarSelector1(10)">Fijar en 10</button><br>
+  <button (click)="resetearSelector1(10)">Resetear (Poner a cero)</button>
   
   <hr>
 
@@ -11,5 +12,6 @@
   <br>
   <button (click)="fijarSelector2(1)">Fijar en 1</button><br>
   <button (click)="fijarSelector2(5)">Fijar en 5</button><br>
-  <button (click)="fijarSelector2(10)">Fijar en 10</button>  
+  <button (click)="fijarSelector2(10)">Fijar en 10</button><br>
+  <button (click)="resetearSelector2(10)">Resetear (Poner a cero)</button>  
 </div>
