Realizados ejercicios proyectos tareas nº3 Angular

--- a/proyecto008/src/app/app.component.html
+++ b/proyecto008/src/app/app.component.html
@@ -1,1 +1,3 @@
 <app-listadoarticulos [datos]="articulos"></app-listadoarticulos>
+<br>
+<app-listadoarticulos [datos]="articulosNuevos"></app-listadoarticulos>
